# elemental-ircd

./: .gitattributes  .gitignore  .lvimrc  .travis.yml  .ycm_extra_conf.py  CONTRIBUTING.md  CREDITS  Config  Dockerfile  FAQ  GIT-Access  INSTALL  Makefile.am  Makefile.in  Mercurial-Access  NEWS  README.FIRST  README.md  TODO-SHADOW  TODO.markdown  aclocal.m4  appveyor.yml  autogen.sh  aux  configure  configure.ac  coverity_tool.tgz  m4
bandb/: Makefile.am  Makefile.in  bandb.c  bantool.c  rsdb.h  rsdb_snprintf.c  rsdb_sqlite3.c  sqlite3.c  sqlite3.h
doc/: Hybrid-team  Makefile.am  Makefile.in  README.cidr_bans  README.md  Ratbox-team  challenge.txt  example.conf  extban.txt  index.txt  ircd.8  ircd.motd  logfiles.txt  modes.txt  monitor.txt  reference.charybdis.conf  reference.conf  server-version-info  tgchange.txt
doc/historical/: CIDR.txt
doc/sgml/oper-guide/: commands.sgml  config.sgml  intro.sgml  oprivs.sgml  ucommands.sgml  umodes.sgml
doc/technical/: elemental-deviation.markdown  event.txt  fd-management.txt  index.txt  linebuf.txt  network.txt  send.txt  ts6-protocol.txt
extensions/: Makefile.am  Makefile.in  README  block_invalid_utf8.c  chm_adminonly.c  chm_nocaps.c  chm_norepeat.c  chm_operonly.c  chm_operonly_compat.c  chm_quietunreg_compat.c  chm_sslonly.c  chm_sslonly_compat.c  createauthonly.c  createoperonly.c  example_module.c  extb_account.c  extb_canjoin.c  extb_channel.c  extb_extgecos.c  extb_oper.c  extb_realname.c  extb_server.c  extb_usermode.c  force_user_invis.c  hurt.c  ip_cloaking-5.c  ip_cloaking.c  m_42.c  m_adminwall.c  m_chanlog.c  m_cycle.c  m_findforwards.c  m_force.c  m_identify.c  m_mkpasswd.c  m_oaccept.c  m_ojoin.c  m_okick.c  m_olist.c  m_omode.c  (+18 more)
extra/runit/ircd/: run
extra/services/anope1.8/: elemental-ircd-ihw.c  elemental-ircd.c
extra/services/anope2.0/: elemental-ircd.cpp
help/: Makefile.am  Makefile.in
help/opers/: adminwall  chghost  cmode  cnotice  cprivmsg  cycle  die  dline  extban  findforwards  forcejoin  forcepart  identify  index  mkpasswd  modlist  modload  modreload  modrestart  modunload  monitor  oaccept  ojoin  okick  olist  omode  operspy  opme  oquit  restart  roleplay  sendbans  set  snomask  stats  trace  umode
help/users/: cmode  index  roleplay  umode
include/: bandbi.h  blacklist.h  cache.h  channel.h  chmode.h  class.h  client.h  common.h  config.h  defaults.h  hash.h  hook.h  hostmask.h  irc_dictionary.h  ircd.h  ircd_defs.h  ircd_getopt.h  ircd_linker.h  ircd_signal.h  listener.h  logger.h  m_info.h  match.h  modules.h  monitor.h  msg.h  newconf.h  numeric.h  packet.h  parse.h  patchlevel.h  privilege.h  reject.h  res.h  reslib.h  restart.h  s_auth.h  s_conf.h  s_newconf.h  s_serv.h  (+11 more)
include/inline/: stringops.h
libratbox/: CREDITS  ChangeLog  Makefile.am  Makefile.in  acinclude.m4  aclocal.m4  configure  configure.ac
libratbox/extra/: gdb_functions
libratbox/include/: .gitignore  Makefile.am  commio-int.h  commio-ssl.h  event-int.h  libratbox_config.h.in  ratbox_lib.h  rb_attributes.h  rb_attributes.h.m4  rb_balloc.h  rb_commio.h  rb_event.h  rb_helper.h  rb_linebuf.h  rb_memory.h  rb_patricia.h  rb_rawbuf.h  rb_snprintf.h  rb_tools.h  serno.h
libratbox/m4/: charybdis.m4  gcc_stack_protect.m4  harden.m4  ratbox.m4
libratbox/src/: Makefile.am  Makefile.in  arc4random.c  balloc.c  commio.c  crypt.c  devpoll.c  epoll.c  event.c  export-syms.txt  gnutls.c  helper.c  kqueue.c  linebuf.c  nossl.c  openssl.c  patricia.c  poll.c  ports.c  ratbox_lib.c  rawbuf.c  rb_memory.c  select.c  sigio.c  snprintf.c  tools.c  unix.c  version.c.SH  version.c.last  win32.c
libratbox/src/netio/: devpoll.c  epoll.c  kqueue.c  poll.c  ports.c  select.c  win32.c
libratbox/src/platform/: unix.c  windows.c
libratbox/src/ssl/: gnutls.c  openssl.c
m4/: elemental.m4
modes/: Makefile.in  charybdis.c  shadowircd.c
modules/: .depend  Makefile.am  Makefile.in  chm_nocolour.c  chm_noctcp.c  chm_nonotice.c  chm_nooperkick.c  extb_canjoin.c  extb_extgecos.c  extb_realname.c  extb_ssl.c  m_accept.c  m_admin.c  m_away.c  m_cap.c  m_capab.c  m_certfp.c  m_challenge.c  m_chghost.c  m_close.c  m_cmessage.c  m_connect.c  m_dline.c  m_encap.c  m_etrace.c  m_help.c  m_info.c  m_invite.c  m_ison.c  m_kline.c  m_knock.c  m_links.c  m_list.c  m_locops.c  m_lusers.c  m_map.c  m_monitor.c  m_motd.c  m_names.c  m_oper.c  (+35 more)
modules/core/: m_ban.c  m_die.c  m_error.c  m_join.c  m_kick.c  m_kill.c  m_message.c  m_metadata.c  m_mode.c  m_nick.c  m_part.c  m_quit.c  m_server.c  m_squit.c
scripts/: coverity.sh  maintainer_rebuild.sh  makerelease.sh  travis_genssl.sh  version.sh
src/: .depend  .gitignore  Makefile.am  Makefile.in  bandbi.c  blacklist.c  cache.c  channel.c  chmode.c  class.c  client.c  extban.c  getopt.c  hash.c  hook.c  hostmask.c  irc_dictionary.c  ircd.c  ircd_lexer.l  ircd_parser.y  ircd_signal.c  listener.c  logger.c  main.c  match.c  messages.tab  modules.c  monitor.c  newconf.c  numeric.c  operhash.c  packet.c  parse.c  privilege.c  reject.c  res.c  reslib.c  restart.c  s_auth.c  s_conf.c  (+11 more)
ssld/: Makefile.am  Makefile.in  ssld.c
tests/: Makefile.am  Makefile.in  admin-format.tcl  away-notify.tcl  chghost.exp  chghost.tcl  cprivmsg-cnotice.tcl  echo-message.tcl  extb_account.tcl  extb_canjoin.tcl  extb_channel.tcl  kick.tcl  metadata.tcl  mode-nooperkick.tcl  monitor.tcl  monitor_oom.tcl  omode.tcl  privmsg.exp  privmsg.tcl  register.exp  register.tcl  snomask-kline.tcl  test-164.tcl  topic.tcl  umodeg.tcl  yourid.tcl
tests/lib/: lib.tcl  numeric.tcl  runtest.tcl
testsuite/: .gitignore  common.conf  coverity.model.c  dh.pem  ensure-links.tcl  ircd.conf.1  ircd.conf.2  ircd.conf.3  killall.sh  runtest.sh  ssl.cert  ssl.key  startall.sh  wait-links.sh
testsuite/astyle/: check_style.sh
tools/: Makefile.am  Makefile.in  README  README.mkpasswd  convertilines.c  convertklines.c  genssl.sh.in  mkpasswd.c  shadow_help.pl  shadow_help_irssi.pl  shadow_help_weechat.pl  shadow_help_xchat.pl  untabify  viconf.c
unsupported/: Makefile.in  m_clearchan.c  make_override_immune.c  sno_channeljoin.c
(+9 files in other folders)
